--- a/src/components/Website/Generalfiles/CSS_GENERAL/checkbox.module.css
+++ b/src/components/Website/Generalfiles/CSS_GENERAL/checkbox.module.css
@@ -15,12 +15,12 @@
     background-color: transparent;
 }
 .checkboxinputstyles:hover:not(:checked) {
-    box-shadow: inset 0 0 0 2px var(--secondary) !important;
+    box-shadow: inset 0 0 0 2px var(--primary) !important;
     background-color: transparent;
 }
 .checkboxinputstyles:checked {
-    box-shadow: inset 0 0 0 2px var(--secondary);
-    background-color: var(--secondary);
+    box-shadow: inset 0 0 0 2px var(--primary);
+    background-color: var(--primary);
 }
 
 .svgstyles {
