--- a/src/components/Website/Generalfiles/CSS_GENERAL/bootstrap.css
+++ b/src/components/Website/Generalfiles/CSS_GENERAL/bootstrap.css
@@ -4841,7 +4841,7 @@ hr {
     margin-top: 10px;
     margin-bottom: 10px;
 }
-.mui-1ez3wq9 {
+/* .mui-1ez3wq9 {
     background-color: rgb(255, 255, 255);
     color: rgb(17, 28, 45);
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
@@ -4884,9 +4884,9 @@ hr {
     animation-duration: 10ms;
     padding-top: 1px;
     padding: 5px 7px !important;
-}
+} */
 
-.css-1yk1gt9-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root {
+/* .css-1yk1gt9-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root {
     font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
     font-weight: 400;
     font-size: 14px !important;
@@ -4906,7 +4906,7 @@ hr {
     align-items: center;
     position: relative;
     border-radius: 4px;
-}
+} */
 
 .iconhover:hover {
     background-color: #00000019;
@@ -5122,4 +5122,19 @@ ul {
     padding: 6px 16px;
     text-align: left;
     text-transform: capitalize !important;
+}
+
+@media print {
+    @page {
+        size: portrait;
+    }
+    /* .print-container {
+        display: block;
+    } */
+
+    .print-item {
+        page-break-after: always;
+        /* Avoid breaking inside these elements */
+        page-break-inside: avoid;
+    }
 }
