--- a/src/components/Website/Generalfiles/CSS_GENERAL/general.module.css
+++ b/src/components/Website/Generalfiles/CSS_GENERAL/general.module.css
@@ -201,17 +201,55 @@ button:focus {
 .card {
     background-color: rgb(255, 255, 255);
     color: rgb(17, 28, 45);
-    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    box-shadow: rgba(37, 83, 185, 0.1) 0px 2px 6px;
+    /* transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; */
+    box-shadow: 0 0.75rem 6rem rgba(56, 65, 74, 0.03);
     /* overflow: hidden; */
     width: 100%;
     background-image: none;
-    border-radius: 18px;
-    padding: 0px;
+    border-radius: 0.25rem;
+    /* padding: 0px; */
     border: none;
-    padding: 30px;
+    padding: 1.5rem !important;
     margin-bottom: 15px !important;
+    overflow: hidden;
+    position: relative;
 }
+
+.card .product_action {
+    opacity: 0;
+    padding: 1.5rem 1.5rem 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    transition: all 0.3s ease 0s;
+    visibility: hidden;
+    z-index: 3;
+}
+
+.card:hover .product_action {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    visibility: visible;
+}
+
+.buttonxs {
+    border-radius: 0.15rem;
+    font-size: 0.75rem;
+    /* padding: 0.2rem 0.6rem; */
+    padding-inline: 0.9rem;
+    padding-top: 0.45rem;
+    padding-bottom: 0.45rem;
+    background-color: #1abc9c;
+    /* box-shadow: 0px 2px 6px 0px; */
+    transition: all 0.4s;
+}
+.buttonxs:hover {
+    background-color: #15967d !important;
+}
+
 .card_header {
     border-color: #cecece;
     position: relative;
