--- a/src/components/Website/Generalfiles/CSS_GENERAL/input.module.css
+++ b/src/components/Website/Generalfiles/CSS_GENERAL/input.module.css
@@ -271,7 +271,7 @@ textarea {
     width: 100%;
     height: 38px;
     border: 1px solid #eee;
-    border-radius: 18px;
+    border-radius: 0.25rem;
     align-items: center;
     display: flex;
     flex-direction: row;
