--- a/src/components/Website/Sidenavfiles/sidenav.module.css
+++ b/src/components/Website/Sidenavfiles/sidenav.module.css
@@ -176,7 +176,7 @@
     transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     white-space: nowrap;
     padding: 5px 10px 5px 0px;
-    border-radius: 18px;
+    border-radius: 0.25rem;
     background-color: inherit;
     color: rgb(17, 28, 45);
     font-weight: 400;
