--- a/src/components/Website/Generalfiles/CSS_GENERAL/general.module.css
+++ b/src/components/Website/Generalfiles/CSS_GENERAL/general.module.css
@@ -210,7 +210,7 @@ button:focus {
     /* padding: 0px; */
     border: none;
     padding: 1.5rem !important;
-    margin-bottom: 15px !important;
+    margin-bottom: 1.5rem !important;
     overflow: hidden;
     position: relative;
 }
@@ -854,7 +854,7 @@ button:focus {
     justify-content: center;
     backdrop-filter: blur(4px);
     min-height: 70px;
-    border-radius: 13px;
+    border-radius: 0.25rem;
 }
 
 @keyframes heartbeat {
