--- a/src/components/Website/Generalfiles/CSS_GENERAL/bootstrap.css
+++ b/src/components/Website/Generalfiles/CSS_GENERAL/bootstrap.css
@@ -108,7 +108,7 @@
     --secondary: #c3dfd0;
     --success: #00cc66;
     --info: #0c3d33;
-    --infohover: #26815e;
+    --infohover: #fcb636;
     --warning: #f7b924;
     --danger: #d92550;
     --dangerhover: #84122d;
