--- a/src/components/Website/Sidenavfiles/sidenav.module.css
+++ b/src/components/Website/Sidenavfiles/sidenav.module.css
@@ -17,11 +17,11 @@
     /* width: 270px; */
     border-right: 0px solid;
     box-sizing: border-box;
-    top: 20px;
-    left: 20px;
-    bottom: 20px;
-    border-radius: 0.25rem;
-    height: calc(100% - 40px);
+    top: 0px;
+    left: 0px;
+    bottom: 00px;
+    /* border-radius: 0.25rem; */
+    height: calc(100%);
     overflow-x: hidden;
 }
 .sidenavlogo {
