--- a/src/components/Website/Sidenavfiles/sidenav.module.css
+++ b/src/components/Website/Sidenavfiles/sidenav.module.css
@@ -149,14 +149,15 @@
     list-style: none;
     transition: 0.3s ease-in-out;
     height: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 290px;
 }
 .vertical_nav_menu li.sidebar_item {
     -webkit-tap-highlight-color: transparent;
     outline: 0px;
     border: 0px;
-    margin: 0px 0px 2px;
+    margin: 0px 0px 10px;
     cursor: pointer;
     user-select: none;
     vertical-align: middle;
@@ -175,7 +176,7 @@
     text-align: left;
     transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     white-space: nowrap;
-    padding: 5px 10px 5px 0px;
+    padding: 0px;
     border-radius: 0.25rem;
     background-color: inherit;
     color: rgb(17, 28, 45);
@@ -227,14 +228,15 @@
     position: absolute !important;
     top: 0px !important;
     bottom: 0px !important;
-    left: -33px !important;
+    /* left: -33px !important; */
     height: 100% !important;
     z-index: -1 !important;
     /* border-radius: 0px 24px 24px 0px !important; */
     transition: all 0.3s ease-in-out 0s !important;
     width: 0px !important;
     background-color: var(--secondary);
-    width: calc(100% + 60px) !important;
+    width: calc(100%) !important;
+    border-radius: 0.25rem;
 }
 .vertical_nav_menu_trans .sidenav_active {
     border-top-right-radius: 10px;
