--- a/src/components/Website/Generalfiles/CSS_GENERAL/general.module.css
+++ b/src/components/Website/Generalfiles/CSS_GENERAL/general.module.css
@@ -474,6 +474,10 @@ button:focus {
     background-color: var(--secondary);
     /* border: 1px solid var(--secondary); */
 }
+.roundbutton:disabled {
+    background-color: var(--secondary) !important;
+    /* border: 1px solid var(--secondary); */
+}
 
 .tag {
     padding: 0.25rem 0.75rem;
