--- a/src/components/Website/Generalfiles/CSS_GENERAL/Fileuploader.module.css
+++ b/src/components/Website/Generalfiles/CSS_GENERAL/Fileuploader.module.css
@@ -2,13 +2,15 @@
     align-items: center;
     justify-content: center;
     margin: 0;
-    min-height: 200px;
+    height: 940px;
     height: auto;
     border: 2px dashed #ccc;
-    border-radius: 1.32vh;
+    border-radius: 0.5rem;
     cursor: pointer;
     transition: 0.3s;
     overflow-x: hidden;
+    padding: 2rem;
+    background-color: #fdfdfd;
 }
 .drop_container::-webkit-scrollbar {
     width: 5px;
@@ -162,4 +164,14 @@
 }
 li.slick-active button:before {
     color: var(--secondary);
+}
+
+._Grid_g2n5w_1 {
+    --grid-gap: 0.625rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(8.125rem, 1fr));
+    gap: var(--grid-gap);
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
