--- a/src/components/Website/Generalfiles/CSS_GENERAL/general.module.css
+++ b/src/components/Website/Generalfiles/CSS_GENERAL/general.module.css
@@ -165,7 +165,12 @@ button:focus {
 }
 @media screen and (max-width: 900px) {
     .app_main {
-        padding: 5px !important;
+        padding: 0px !important;
+    }
+}
+@media screen and (max-width: 500px) {
+    .app_main {
+        padding: 0px !important;
     }
 }
 .app_main_translated {
