--- a/src/components/Website/Generalfiles/CSS_GENERAL/bootstrap.css
+++ b/src/components/Website/Generalfiles/CSS_GENERAL/bootstrap.css
@@ -220,182 +220,90 @@ img {
 th {
     text-align: inherit;
 }
-.table {
-    /* width: 100%; */
-    margin-bottom: 1rem;
-    border-collapse: collapse;
-    height: max-content;
-    position: relative;
-    background-color: transparent;
-}
-.table tbody {
-    display: table-row-group;
-    vertical-align: middle;
-    border-color: inherit;
-    color: black;
-    background-color: transparent;
-}
-.table th {
-    font-family: Plus Jakarta Sans !important;
+/* table */
 
+.table_responsive {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+.table-responsive-custom {
+    width: 100%;
+    overflow-x: auto;
+    /* border: 1px solid #ddd; */
+    border-radius: 6px;
+    -webkit-overflow-scrolling: touch;
+}
+
+.table {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: white;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+}
+
+.table thead {
+    background-color: white;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
+.table thead tr {
+    background-color: white;
+}
+
+.table thead th {
     font-weight: 600;
     color: black;
-    -webkit-box-align: center;
-    align-items: center;
-    display: flex;
-    height: 40px;
-    padding: 0px 16px;
-    /* background: rgb(255, 224, 201); */
-    /* background: white; */
-
-    /* box-shadow: rgb(215, 213, 210) -1px 0px 0px inset !important; */
-    /* border: 1px solid #eceffa; */
-
-    font-size: 16px !important;
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    box-sizing: border-box;
+    font-size: 16px;
+    padding: 12px 16px;
     border-bottom: 1px solid #eee;
-    border-radius: 0px;
-
-    /* min-width: fit-content; */
-    width: 200px;
-    /* color: #6b7280; */
-    /* font-weight: 400; */
-    min-width: 240px;
+    min-width: 150px;
+    text-align: left;
+    background-color: white;
+    white-space: nowrap;
 }
 
-/* .table th:last-child {
-    border-top-right-radius: 0.5rem;
-    border-bottom-right-radius: 0.5rem;
+.table tbody tr {
+    background-color: white;
+    transition: background-color 0.3s;
 }
-.table th:first-child {
-    border-top-left-radius: 0.5rem;
-    border-bottom-left-radius: 0.5rem;
-} */
+
+.table tbody tr:hover {
+    background-color: #f1faff;
+}
 
 .table tbody td {
-    /* background: #f4f6fc; */
-    /* padding: 10px; */
-    /* min-height: 85px; */
-    /* padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem; */
-    box-sizing: border-box;
-    /* min-width: fit-content; */
-    width: 200px;
-    /* color: #6b7280; */
-    font-weight: 400 !important;
-    min-width: 240px;
-    font-size: 15px !important;
-    font-family: Plus Jakarta Sans !important;
-    padding: 15px 16px;
-    border-radius: 0px;
-
+    font-size: 15px;
+    padding: 14px 16px;
     border-bottom: 1px solid #eee;
-
-    /* background-color: white; */
-    /* border-bottom: 2px solid #eceffa; */
-}
-/* .table tbody td:last-child {
-    border-top-right-radius: 0.5rem;
-    border-bottom-right-radius: 0.5rem;
-}
-.table tbody td:first-child {
-    border-top-left-radius: 0.5rem;
-    border-bottom-left-radius: 0.5rem;
-} */
-
-.table tr {
-    display: flex;
-    flex: 150 0 auto;
-    margin-bottom: 10px;
-
-    /* border: 2px solid #eceffa; */
-    background-color: white;
-    border-radius: 0.5rem;
-
-    /* background-color: rgb(255, 255, 249); */
-
-    /* border-bottom: 1px solid #6b7280; */
-    /* box-shadow: 0 0 #0000, 0 0 #0000, 0px 2px 6px rgba(0, 0, 0, 0.06); */
-    /* cursor: pointer; */
-    transition: all 0.4s;
+    color: #333;
+    white-space: nowrap;
+    min-width: 150px;
+    font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
-.table tr:hover {
-    /* background-color: rgba(255, 255, 255, 0.63); */
-}
-.table thead {
-    display: flex;
-    flex: 150 0 auto;
-    margin-bottom: 10px;
-    /* position: sticky !important; */
-    /* top: -10px !important; */
-    /* border: 2px solid #eceffa; */
-    background-color: white;
-    border-radius: 0.5rem;
-    z-index: 10;
-    /* border-bottom: 1px solid rgba(94, 38, 132, 0.4); */
-
-    /* border-bottom: 2px solid #eceffa; */
-    /* background-color: white; */
-}
-.table_thbg thead th {
-    font-size: 12px;
+.wordbreak {
+    word-break: break-word;
+    white-space: normal;
 }
 
-.table_bordered {
-    border: 1px solid #e9ecef;
-}
-.table_bordered thead {
-    background-color: transparent !important;
-}
-.table_bordered tbody tr {
-    background-color: transparent !important;
-}
-.table_bordered th,
-.table_bordered td {
-    /* border: 1px solid #e9ecef; */
-    font-size: 13px;
-
-    /* min-height: 60px !important; */
-    background-color: transparent !important;
-}
-.table_bordered tr:last-child {
-    border-bottom: none;
-}
-.table_bordered thead th,
-.table_bordered thead td {
-    /* border-bottom-width: 2px; */
-}
-.table_borderless th,
-.table_borderless td,
-.table_borderless thead th,
-.table_borderless tbody + tbody {
-    border: 0;
-}
-.table_responsive {
-    display: block !important;
-    width: 100% !important;
-    overflow-x: auto !important;
-    -webkit-overflow-scrolling: touch !important;
-    -ms-overflow-style: -ms-autohiding-scrollbar !important;
-}
+/* Optional: Zebra striping */
 .table-striped tbody tr:nth-of-type(odd) {
-    background-color: rgba(236, 243, 254, 1);
+    background-color: rgba(236, 243, 254, 0.7);
 }
+
+/* Responsive tweak for small screens */
 @media screen and (max-width: 800px) {
-    td {
-        min-width: 300px !important;
+    .table thead th,
+    .table tbody td {
+        min-width: 250px;
     }
 }
-.table_hover tbody tr:hover {
-    background-color: #e0f3ff;
-    cursor: pointer;
-}
+
 label {
     display: inline-block;
     margin-bottom: 0.5rem;
