--- a/src/components/Website/Generalfiles/CSS_GENERAL/input.module.css
+++ b/src/components/Website/Generalfiles/CSS_GENERAL/input.module.css
@@ -295,7 +295,7 @@ textarea {
     width: 100%;
     height: 50px;
     border: 1px solid rgba(212, 212, 212, 1);
-    border-radius: 8px;
+    border-radius: 0.25rem;
     align-items: center;
     display: flex;
     flex-direction: row;
@@ -944,7 +944,7 @@ textarea {
     height: 36px;
     border-radius: 2px;
     color: black;
-    border-radius: 8px;
+    border-radius: 0.25rem;
     background-color: rgba(233, 233, 233, 1);
     transition: all 0.1s;
     cursor: pointer;
@@ -985,9 +985,9 @@ textarea {
     .formfield {
         transition: border-color 0.2s;
         width: 100%;
-        min-height: 50px;
+        min-height: 40px;
         border: 1px solid rgba(212, 212, 212, 1);
-        border-radius: 8px;
+        border-radius: 0.25rem;
         align-items: center;
         display: flex;
         flex-direction: row;
@@ -1045,7 +1045,7 @@ textarea {
         width: 100%;
         min-height: 50px;
         border: 1px solid rgba(212, 212, 212, 1);
-        border-radius: 8px;
+        border-radius: 0.25rem;
         align-items: center;
         display: flex;
         flex-direction: row;
@@ -1102,13 +1102,13 @@ textarea {
     }
 
     .formlabel {
-        position: absolute;
-        top: 32px !important;
-        padding-inline-start: 10px;
+        position: relative !important;
+        /* top: -25px !important; */
+        /* padding-inline-start: 10px; */
         display: block;
         transition: 0.2s;
-        font-size: 2.12vh;
-        color: rgba(102, 102, 102, 1) !important;
+        font-size: 0.75rem;
+        color: black !important;
     }
     .borderend {
         border-inline-end: 0px solid rgba(212, 212, 212, 1) !important;
